# geospatial-ontario-property-intelligence

./: .gitignore  README.md  main.py  pyproject.toml  run_analysis.py  run_gdb_info.py  run_landcover.py  run_processing.py
src/: config.py
src/analytics/: insights.py  metrics.py  ranking.py  report.py
src/cleaning/: spatial_cleaning.py
src/config/: settings.py
src/export/: cache.py  export_data.py
src/feature_engineering/: classification.py  final_score.py  property_score.py
src/ingestion/: inspect_gdb.py  inspect_shapefile.py
src/processing/: basic_geometry.py  dissolve.py  spatial_metrics.py
src/profiling/: data_profile.py
src/utils/: logger.py
src/validation/: spatial_validation.py
src/visualization/: choropleth.py  dashboard.py  plots.py
