[project]
name = "geo-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.1",
    "pyspark>=4.1.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
]
