[project]
name = "geo-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=4.3.0",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "kaleido>=1.3.0",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "pyproj>=3.7.1",
    "pyspark>=4.1.2",
    "rasterio>=1.4.4",
    "rasterstats>=0.21.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
]
